Fix collapsables and create new scss file for them

--- a/src/scss/layout/_design.scss
+++ b/src/scss/layout/_design.scss
@@ -93,21 +93,3 @@
     background-color: $palette-3-3;
   }
 }
-
-//JS
-
-.designCollapsableCont{
-  display: none;
-}
-
-.js-fill-collapsable-container{
-  display: none;
-}
-
-.js-design-arrow{
-   transform: rotate(180deg);
-}
-
-.js-fill-arrow{
-  transform: rotate(180deg);
-}
